# group-class-implementation

./: .gitignore  CMakeLists.txt  GroupDriver  Makefile  README.md
include/Group/: CyclicGroup.h  Group.h
src/: main.cpp
src/Group/: CyclicGroup.cpp  Group.cpp
